# kayak_ui_deserializer

./: Cargo.toml  Readme.md
fixtures/: full.json  image-bundle.json  menu-button.json  text-widget.json
src/: _legacy.rs.txt  bevy.rs  corner.rs  edge.rs  json_deserializer.rs  kayak.rs  kayak_rsx.rs  kayak_store.rs  kayakui_data.rs  lib.rs  main.rs  morphorm.rs  serialized.rs  serializer.rs  store.rs  style.rs  text_props.rs  text_widget.rs  u_nine_patch.rs  ui_alignment.rs  ui_background.rs  ui_bevy_style.rs  ui_button.rs  ui_button_bundle.rs  ui_calc_size.rs  ui_clip.rs  ui_color.rs  ui_corner.rs  ui_cursor_icon.rs  ui_edge.rs  ui_element.rs  ui_element_bundle.rs  ui_image.rs  ui_image_bundle.rs  ui_kstyle.rs  ui_layout_type.rs  ui_nine_patch.rs  ui_nine_patch_bundle.rs  ui_parser.rs  ui_rect.rs  (+15 more)
src/bevy/: bundle.rs  calculated_size.rs  color.rs  corner.rs  image.rs  size.rs  style.rs  transform.rs  ui_rect.rs
src/bevy/bundle/: background_bundle.rs  clip_bundle.rs  element_bundle.rs  image_bundle.rs
src/bevy/corner/: corner_deser.rs  scorner.rs
src/bevy/image/: image_deser.rs  simage.rs
src/bevy/size/: size_deser.rs  ssize.rs
src/bevy/style/: sstyle.rs  style_deser.rs  (+1 more)
src/kayak/: bundle.rs  deserializer.rs  edge.rs  kbutton.rs  kstyle.rs  layout_type.rs  nine_patch.rs  rect.rs  serializer.rs  store.rs  text_box_props.rs  text_props.rs  texture_atlas_props.rs  units.rs  window.rs
src/kstyle/: mod.rs  ui_kstyle.rs
src/labs/: kayak_plain.rs  macro.rs
src/morphorm/: layout_type.rs  units.rs
src/ui_bevy_style/: builder.rs  serializer.rs
(+60 files in other folders)
