[package]
name = "kayak_ui_deserializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
kayak_ui = "0.1.0"
kayak_ui_macros = "0.1.0"
morphorm = "0.3.0"
nanoserde = "0.1.32"
regex = "1.7.0"
